# todo

./: .env  Cargo.toml  configuration.yaml
migrations/: 20211219175041_create_todo_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  todos.rs
src/server/: startup.rs
src/server/routes/: mod.rs
tests/: delete_todo.rs  get_todo.rs  get_todos.rs  post_todo.rs  put_todo.rs  spawn_app.rs  todos.rs  utils.rs
