[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.10"
config = "0.11.0"
serde = { version = "1.0.132", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.5.9"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] 

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"